Deleted legend in radius sensitivity plot.

--- a/supplementary-material/supplementaryMaterial.tex
+++ b/supplementary-material/supplementaryMaterial.tex
@@ -274,11 +274,8 @@ These supplementary methods derive all the models used. For continuity, the gas 
                 \caption{}               
                 \label{f:speed}
         \end{subfigure}%%
-\caption{Model sensitivity (for all gREM submodels) to error in estimates of a) signal width ($\alpha$)  b) sensor width ($\theta$), c) sensor radius ($r$), d) animal movement speed ($v$). Estimates are -10\% (red), -1\% (orange), 0\% (yellow), +1\% (green) and +10\% (blue) of the true parameter value. The grey dashed line indicates zero error in density estimates. The error bars indicate standard error across all simulations.
+\caption{Model sensitivity (for all gREM submodels) to error in estimates of a) signal width ($\alpha$)  b) sensor width ($\theta$), c) sensor radius ($r$), d) animal movement speed ($v$). Estimates are -10\% (red), -1\% (orange), 0\% (grey), +1\% (green) and +10\% (blue) of the true parameter value. The black dashed line indicates zero error in density estimates. The error bars indicate standard error across all simulations.
 %@tim double check this is standard error 
-%@tim yellow and orange is similar
-%@tim yellow is invisible
-%@tim grey line to black and yellow to grey. 707371ff
 }
 
 \label{f:sensitivity}
