--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -255,7 +255,7 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the accuracy
 
 \subsubsection*{Impact of parameter error}
 
-
+The percentage error in the density estimates across all parameters and gREM submodels shows a similar response for under and over estimated parameters, suggesting the accuracy is reasonable with respect to parameter error (Appendix S6). The impact of parameter error on the precision of the density estimate varies across and gREM submodels and parameters, where $\alpha$ shows the largest variation including the largest values (Appendix S6).
 
 
 
