Description of estimating parameters.

--- a/gREM_ms_revisions.tex
+++ b/gREM_ms_revisions.tex
@@ -200,9 +200,9 @@ gREM submodel specifications were done by hand, and the integration was done usi
 
 We tested the accuracy and precision of the gREM by developing a spatially explicit simulation of the interaction of sensors and animals using different combinations of sensor detection widths, animal signal widths, number of captures, and models of animal movement. One hundred simulations were run where each consisted of a  \SI{7.5}{\kilo\meter} by \SI{7.5}{\kilo\meter} square with periodic boundaries. A stationary sensor of radius $r$, \SI{10}{\meter}, was set up in the exact centre of each simulated study area, covering seven sensor detection widths $\theta$, between 0 and $2\pi$ ($2/9\pi$, $4/9\pi$, $6/9\pi$, $8/9\pi$, $10/9\pi$, $14/9\pi$, and $2\pi$). Each sensor was set to record continuously and to capture animal signals instantaneously from emission. Each simulation was populated with a density of \SI{70}{\animals\per\kilo\meter\squared}, calculated from the equation in \cite{damuth1981population} as the expected density of mammals weighing \SI{1}{\gram}. This density therefore represents a reasonable estimate of density of individuals, given that the smallest mammal is around \SI{2}{\gram} \citep{jones2009pantheria}. A total of 3937 individuals per simulation were created which were placed randomly at the start of the simulation. 11 signal widths $\alpha$ between 0 and $\pi$ were used ($1/11\pi$, $2/11\pi$, $3/11\pi$, $4/11\pi$, $5/11\pi$, $6/11\pi$, $7/11\pi$, $8/11\pi$, $9/11\pi$, $10/11\pi$, $\pi$). 
 
-Each simulation lasted for $N$ steps (14400) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. The distance, $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation, $\sigma_d = vT/10$, where the standard deviation was chosen to scale with the average distance travelled. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen as this is the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end of each step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), or change direction where the change in direction has a uniform distribution in the interval $\left[-A, A\right]$. This resulted in seven different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2) stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) correlated random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$. Individuals were counted as they moved into the detection zone of the sensor per simulation. 
+Each simulation lasted for $N$ steps (14400) of duration $T$ (15 minutes) giving a total duration of 150 days. The individuals moved within each step with a distance $d$, with an average speed, $v$. The distance, $d$, was sampled from a normal distribution with mean distance, $\mu_d = vT$, and standard deviation, $\sigma_d = vT/10$, where the standard deviation was chosen to scale with the average distance travelled. An average speed, $v = $ \SI{40}{\kilo\meter \per \day}, was chosen based on the largest day range of terrestrial animals \citep{carbone2005far}, and represents the upper limit of realistic speeds. At the end of each step, individuals were allowed to either remain stationary for a time step (with a given probability, $S$), or change direction where the change in direction has a uniform distribution in the interval $\left[-A, A\right]$. This resulted in seven different movement models where: (1) simple movement, where $S$ and $A$ = 0; (2) stop-start movement, where (i) $S$ = 0.25, $A$ = 0, (ii) $S$ = 0.5, $A$ = 0, (iii) $S$ = 0.75, $A$ = 0; (3) correlated random walk movement, where (i) $S$ = 0, $A$ = $\pi/3$, (ii) $S$ = 0, $A$ = $2\pi/3$, iii) $S$ = 0, $A$ = $\pi$. Individuals were counted as they moved into the detection zone of the sensor per simulation. 
 
-We calculated the estimated animal density from the gREM by summing the number of captures per simulation and inputting these values into the correct gREM submodel. The accuracy of the gREM was determined by comparing the true simulation density with the estimated density. gREM precision was determined by the standard deviation of estimated densities. We used this method to compare the accuracy and precision of all the gREM submodels. As these submodels are derived for different combinations of $\alpha$ and $\theta$, the accuracy and precision of the submodels was used to determine the impact of different values of $\alpha$ and $\theta$. 
+We calculated the estimated animal density from the gREM by summing the number of captures per simulation and inputting these values into the correct gREM submodel. The accuracy of the gREM was determined by comparing the true simulation density with the estimated density. Precision of the gREM was determined by the standard deviation of estimated densities. We used this method to compare the accuracy and precision of all the gREM submodels. As these submodels are derived for different combinations of $\alpha$ and $\theta$, the accuracy and precision of the submodels was used to determine the impact of different values of $\alpha$ and $\theta$. 
 
 The influence of the number of captures and animal movement models on accuracy and precision was investigated using four different gREM submodels representative of the range $\alpha$ and $\theta$ values (submodels NW1, SW1, NE1, and SE3, Figure~\ref{f:equalRegions}). From a random starting point we ran the simulation until a range of different capture numbers were recorded (from 10 to 100 captures), recorded the length of time this took, and estimated the animal density for each of the four sub-models. These estimated densities were compared to the true density to assess the impact on the accuracy and precision of the gREM. We calculated the coefficient of variation in order to compare the precision of the density estimates from simulations with different expected numbers of captures. The gREM also assumes that individuals move continuously with straight-line movement (simple movement model) and we therefore assessed the impact of breaking the gREM assumptions. We used the four submodels to compare the accuracy and precision of a simple movement model, stop-start movement models (using different average amounts of time spent stationary), and random walk movement models. As the parameters ($\alpha$, $\beta$, $r$ and $v$) are likely to be measured with error, we compared true simulation densities to densities estimated with parameters with errors of $0\%$, $\pm 5\%$ and $\pm 10\%$.
 
@@ -255,7 +255,7 @@ Within the four gREM submodels tested (NW1, SW1, SE3, NE1), neither the accuracy
 
 \subsubsection*{Impact of parameter error}
 
-The percentage error in the density estimates across all parameters and gREM submodels shows a similar response for under and over estimated parameters, suggesting the accuracy is reasonable with respect to parameter error (Appendix S6). The impact of parameter error on the precision of the density estimate varies across and gREM submodels and parameters, where $\alpha$ shows the largest variation including the largest values (Appendix S6).
+The percentage error in the density estimates across all parameters and gREM submodels shows a similar response for under and over estimated parameters, suggesting the accuracy is reasonable with respect to parameter error (Appendix S6). The impact of parameter error on the precision of the density estimate varies across and gREM submodels and parameters, where $\alpha$ shows the largest variation including the largest values. However, in all cases the density estimate percentage error is not more than 5\% greater than the error in the parameter estimate (Appendix S6).
 
 
 
@@ -284,32 +284,51 @@ The percentage error in the density estimates across all parameters and gREM sub
 %%%% ------- Discussion ---------%%%%
 \section*{Discussion}
 
-We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citet{rowcliffe2008estimating} to be applicable to any combination of sensor width and signal directionality. We have used simulations to show, as a proof of principle, that these models are accurate and precise. We emphasise that the approach is robust to multiple detections of the same individual within a survey and does not require cases of multiple capture to be removed or recorded. The precision of the gREM was found to be dependent on the number of captures which in turn depends on the width of the sensor and the signal.
-
 \subsection*{Analytical model}
-The gREM was derived for different combinations of $\alpha$ and $\theta$ resulting in 25 different submodels, the expression for $\bar{p}$ are equal for many of these submodels resulting in eight different equations including the previously derived gas model and REM. These submodels were tested for consistency with adjacent expressions being equal at their boundaries. These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study, such as echolocating bats \citep{clement2013estimating}, with non-invasive methods such as remote sensors. The gREM also allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including songbirds \citep{blumstein2011acoustic}, dolphins \citep{lammers2003directionality}, as well as echolocating bats \citep{walters2013challenges}. 
 
-There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and sensor, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded; simply replace animal speed $v$ with $v + v_s$ where $v_s$ is the speed of the sensor. However, when the animal has a directional call, as seen in both terrestrial and aquatic environments \citep{lammers2003directionality,blumstein2011acoustic}, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e., not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur, e.g. an acoustic detector towed from a boat when studying porpoises \citep{kimura2014acoustic} or surveying echolocating bats from a moving car \citep{ahlen1999use, jones2011indicator}. 
+We have developed the gREM such that it can be used to estimate density from acoustic sensors and camera traps. This has entailed a generalisation of the gas model and the REM in \citet{rowcliffe2008estimating} to be applicable to any combination of sensor width  $\theta$ and signal directionality $\alpha$. We emphasise that the approach is robust to multiple detections of the same individual within a survey and does not require cases of multiple capture to be removed or recorded. We have used simulations to show, as a proof of principle, that these models are accurate and precise. The precision of the gREM was found to be dependent on the number of captures which in turn depends on the width of the sensor and the signal.
+
+%These new submodels will allow researchers to evaluate the absolute density of animals that have previously been difficult to study, such as echolocating bats \citep{clement2013estimating}, with non-invasive methods such as remote sensors. The gREM also allows the data from acoustic detectors to be used where an animal has a directional calls, this could be used for a range of animals including songbirds \citep{blumstein2011acoustic}, dolphins \citep{lammers2003directionality}, as well as echolocating bats \citep{walters2013challenges}. 
+
+There are a number of possible extensions to the gREM which could be developed in the future. The original gas model was formulated for the case where both subjects, either animal and sensor, or animal and animal, are moving \citep{Hutchinson_Waser_2007}. Indeed any of the models with animals that are equally detectable in all directions ($\alpha = 2\pi$) can be trivially expanded by replacing animal speed $v$ with $v + v_s$ where $v_s$ is the speed of the sensor. However, when the animal has a directional call, as seen in both terrestrial and aquatic environments \citep{lammers2003directionality,blumstein2011acoustic}, the extension becomes less simple. The approach would be to calculate again the mean profile width. However, for each angle of approach, one would have to average the profile width for an animal facing in any direction (i.e., not necessarily moving towards the sensor) weighted by the relative velocity of that direction. There are a number of situations where a moving detector and animal could occur, e.g. an acoustic detector towed from a boat when studying porpoises \citep{kimura2014acoustic} or surveying echolocating bats from a moving car \citep{ahlen1999use, jones2011indicator}. 
 
 Interesting but unstudied problems impacting the gREM are firstly, edge effects caused by sensor trigger delays (the delay between sensing an animal and attempting to record the encounter) \citep{rovero2013camera}, and secondly, sensors which repeatedly turn on an off during sampling \citep{jones2011indicator}. The second problem is particularly relevant to acoustic detectors which record ultrasound by time expansion. Here ultrasound is recorded for a set time period and then slowed down and played back, rendering the sensor 'deaf' periodically during sampling. Both of these problems may cause biases in the gREM, as animals can move through the detection zone without being detected. As the gREM assumes constant surveillance, the error created by switching the sensor on and off quickly will become more important if the sensor is only on for short periods of time. For example, if it takes longer for the recording device to be switched on than the length of some animal calls, then there could be a systematic underestimation of density. We recommend that the gREM is applied to constantly sampled data, and the impacts of breaking these assumptions on the gREM should be further explored. 
 
-Detection probability is a major focus for methods estimating denstity. The gREM does not fit a statistical model to estimate detection probability as occupancy models and distance sampling do \citep{royle2003estimating, barlow2005estimates, marques2011estimating}. Instead it explicitely models the process, with animals only being detected if they approach the sensor from a suitable direction. More detailed models of this process could include the regularity of acoustic calls or other details. 
+
 
 \subsection*{Accuracy, Precision and Recommendations for Best Practice}
 Based on our simulations, we believe that the gREM has the potential to produce accurate estimates for many different species, using either camera traps or acoustic detectors. However, the precision of the gREM differed between submodels. For example, when the sensor and signal width were small, the precision of the model was reduced. Therefore when choosing a sensor for use in a gREM study, the sensor detection width should be maximised. If the study species has a narrow signal directionality, other aspects of the study protocol, such as length of the survey, should be used to compensate. 
 
-The precision of the gREM is greatly affected by the number of captures. The coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, considered to a very good level of precision \citep{thomas2012passive}. Many current studies do not reach this level of precision, with most studies reporting coefficient of variations greater than the 10\% level \citep{o2003crouching, proctor2010ecological, foster2012critique}. The length of surveys in the field will need to be adjusted so that enough data can be collected to reach this precision level. Populations of fast moving animals or populations with high densities will require less survey effort than those species that are slow moving or have populations with low densities. However it should be noted that under live survey conditions, where there is uncertainty and natural variation around animal speeds, call and signal widths, it may take more captures to reach this level of precision.  
+The precision of the gREM is greatly affected by the number of captures. The coefficient of variation falls dramatically between 10 and 60 captures and then after this continues to slowly reduce. At 100 captures the submodels reach 10\% coefficient of variation, considered to a very good level of precision \citep{thomas2012passive}. Many current studies do not reach this level of precision, with most studies reporting coefficient of variations greater than the 10\% level \citep{o2003crouching, proctor2010ecological, foster2012critique}. The length of surveys in the field will need to be adjusted so that enough data can be collected to reach this precision level. Populations of fast moving animals or populations with high densities will require less survey effort than those species that are slow moving or have populations with low densities. 
 
-The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks) though it is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and this might be evident given other simulation setups. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. Further work should use animal movement data to test the validity of gREM beyond simple movement models. The precision of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
+The gREM was both accurate and precise for all the movement models we tested (stop-start movement and correlated random walks). The precision of the gREM may be affected by the interaction between the movement model and the size of the detection radius. We have studied a relatively long step length compared to the size of the detection radius, and therefore the chance of catching the same animal multiple times within a short space of time was reduced and there is little effect on the precision of the model (Figure \ref{f:Tort}). However, if the ratio of step length to detection radius was smaller, then this may decrease the precision of the model (but should not decrease its accuracy). 
 
-In our simulations we have assumed perfect estimates of parameter values. While estimates will never be perfect, the gREM is predictably sensitive to inaccurate parameters estimates (Appendix S6). The measurement of parameters is taxon dependant although there are many commonalities. Estimates of $r$ can be measured directly or calculated using physical acoustic models (e.g. \citep{holderied2003echolocation}) while the sensor angle is often easily measured \citep{adams2012you}. Call directionality has been measured using arrays of microphones \citep{brinklov2011} though the measurements are rarely of $\alpha$ exactly. When estimating $v$ the measure used should be relevant to the timing of a survey; if a survey is continually running, then day range may be a good measures \citep{carbone2005far} whereas if a survey is only conducted when a species is active (e.g. dawn-dusk bat surveys) then estimates of the speed of movement only during the survey period may be more appropriate. 
+We found that the sensitivity of the gREM to inaccurate parameter estimates was both predictable and reasonable (Appendix S6), although this varies between different parameters and gREM submodels. Care should be taken while estimating these parameters when analysing both acoustic and camera trap data, however acoustic data poses particular problems. For acoustic surveys, estimates of $r$ (detection distance) can be measured directly or calculated using sound attenuation models (e.g. \citep{holderied2003echolocation}), while the sensor angle is often easily measured \citep{adams2012you} or in the manufacturer's specifications. When estimating animal movement speed $v$, only the speed of movement during the survey period should be used. The signal width is the most sensitive parameter to inaccurate estimates (Appendix S6) and is also the most difficult to measure.  While this parameter is typically assumed to be $2\pi$ for camera trap surveys, fewer estimates exist for acoustic signal widths. Although signal width has been measured for echolocating bats using arrays of microphones \citep{brinklov2011}, more work should be done on obtaining estimates for a range of acoustically surveyed species.
+
+The measurement of parameters is taxon dependant although there are many commonalities. . Call directionality has been though the measurements are rarely of $\alpha$ exactly.  
+%However it should be noted that under live survey conditions, where there is uncertainty and natural variation around animal speeds, call and signal widths, it may take more captures to reach this level of precision.  
+
+% While estimates are needed, model not too sensitive
+% 
+% need to be carefuil with all
+%
+% alpha is most sensitive, should be careful. Different across parameters
+% Not important for camera trap.
+% practical holdereid
+% further work should focus on this
 
 \subsection*{Limitations}
 Although we have used simulations to validate the gREM submodels, much more robust testing is needed. Although difficult, proper field test validation would be required before the models could be fully trusted.  The REM \citep{rowcliffe2008estimating} has already been field tested, and both \citet{rowcliffe2008estimating} and \citet{zero2013monitoring} both found that the REM was an effective manner of estimating animal densities \citep{rowcliffe2008estimating, zero2013monitoring}. In some taxa gold standard methods of estimating animal density exist, such as capture-mark-recapture \citep{sollmann2013using}. Where these gold standard exist or true numbers are known, a simultaneous gREM study could be completed to test the accuracy under field conditions, similar to the tests in \citet{rowcliffe2008estimating}. An easier way to continue to evaluate the models is to run more extensive simulations which break the assumptions of the analytical models. The main element that cannot be analytically treated is the complex movement of real animals. Therefore testing these methods against true animal traces, or more complex movement models would be required.
 
+
+%though it is expected that nonlinear movement will increase variance \citep{Hutchinson_Waser_2007} and this might be evident given other simulation setups. Furthermore, these movement models are still simple representations of true animal movement which are dependent on multiple factors such as behavioural state and existence of home ranges \citep{smouse2010stochastic}. 
+
+
+
+
 Within the simulation we have assumed an equal density across the study area, however in a field environment the situation would be much more complex, with additional variation coming from local changes in density between sensor sites. Though theoretically unequal densities should not affect accuracy \citep{Hutchinson_Waser_2007}, it will affect precision and further simulations should be used to quantify this effect. We allowed the sensor to be stationary and continuously detecting, negating the triggering, and non-continuous recording issues that could exist with some sensors. In the simulation animals moved at a speed of $\SI{40}{\kilo\meter \per \day}$, equivalent to the largest day range of terrestrial animals \citep{carbone2005far}. Other speed values should not alter the accuracy of the gREM, however, precision would be affected, all else being equal, since slower speeds produce fewer records. We also assume perfect knowledge of the average speed of an animal and size of the detection zone. All of which may lead to possible bias or a decrease in precision. 
 
-
+Detection probability is a major focus for methods estimating density. The gREM does not fit a statistical model to estimate detection probability as occupancy models and distance sampling do \citep{royle2003estimating, barlow2005estimates, marques2011estimating}. Instead it explicitely models the process, with animals only being detected if they approach the sensor from a suitable direction. More detailed models of this process could include the regularity of acoustic calls or other details. 
 
 \subsection*{Implications for ecology and conservation}
 The gREM can estimate densities of a number of taxa where no, or few, accurate methods currently exist to measure absolute animal density and trends in absolute abundances \citep{thomas2012passive}. Many of these species are critically endangered and monitoring their populations is of conservation interest. For example, current methods of density estimation for the threatened Francisana dolphin (\emph{Pontoporia blainvillei}) may result in underestimation of their numbers \citep{crespo2010abundance}. Our method may also be important for understanding zoonotic diseases, for example estimating population sizes of echolocating bats, which are an important reservoir of infectious disease that affect humans, livestock and wildlife \citep{calisher2006bats}. In addition, using gREM it may be easier than other methods to measure the density of animals which may be useful in quantifying ecosystem services, such as studying the levels of songbirds which are known to have a positive influence on pest control in coffee production \citep{jirinec2011roosting}. The gREM is suitable for any species that would be consistently recorded within range of a detector, such as echolocating bats \citep{kunz2009methods}, songbirds \citep{buckland2006point}, whales \citep{marques2009estimating} or forest primates \citep{hassel2008reliable}. With increasing technological capabilities, this list of species is likely to increase dramatically. Finally, the passive sensor methods that the gREM use are noninvasive and do not require individual marking \citep{jewell2013effect} or naturally identifying marks (as required for mark-recapture models). This makes them suitable for large, continuous monitoring projects with limited human resources \citep{kelly2012noninvasive}. It also makes them suitable for species that are under pressure, species that cannot naturally be individually recognised or species that are difficult or dangerous to catch \citep{thomas2012passive}.
